# cxx14-hash

./: README.md
hash/: CMakeLists.txt  debug.cpp  debug.hpp  fnv1.cpp  fnv1.hpp  hash.cpp  hash.hpp  std.cpp  std.hpp
hash/hash.test/: CMakeLists.txt  debug.cpp  fnv1.cpp
